--- a/src/pages/style/mixin.styl
+++ b/src/pages/style/mixin.styl
@@ -10,11 +10,11 @@ ellipsis()
 //我的订单相关按钮
 orderbtn()
   width:2rem
-  height:1rem
+  height:.75rem
   border:1px solid #ccc
   border-radius:1rem
   text-align:center
-  line-height:1rem
+  line-height:.75rem
   font-size:.35rem
 
 //购物车页面底部
