--- a/src/pages/style/bus.scss
+++ b/src/pages/style/bus.scss
@@ -1,6 +1,6 @@
 $bgColor: #fff;
 
-@mixin busBtn($bgcolor) {
+@mixin busBtn($bGcolor) {
     padding:0 .16rem;
     border-radius: .2rem;
     display: inline-block;
@@ -9,7 +9,7 @@ $bgColor: #fff;
     margin-left: .1rem;
     line-height: .7rem;
     color: #fff;
-    background: $bgcolor;
+    background: $bGcolor;
 }
 
 @mixin ellpisis {
